2007-11-05  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py:  Save the line number the script starts on
	as a debugging aid in anaconda.

2007-10-31  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/ignoredisk.py (F8_IgnoreDisk.parse):  Remove
	redundant method.

	* pykickstart/commands/langsupport.py (FC3_LangSupport.parse),
	pykickstart/commands/selinux (FC3_SELinux.parse):  Use
	builtin _setToSelf method.

	* pykickstart/commands/logvol.py (F9_LogVolData),
	pykickstart/commands/partition (F9_PartData):  We already get
	fsoptions from the superclass.

	* pykickstart/commands/reboot.py (FC6_Reboot):  Use methods from the
	superclass.

	* pykickstart/commands/raid.py (FC5_Raid.reset, F9_Raid.reset):
	Remove unused methods.

2007-10-31  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/commands/logvol.py, pykickstart/commands/network.py,
	pykickstart/commands/partition.py, pykickstart/commands/raid.py,
	pykickstart/commands/repo.py, pykickstart/commands/user.py,
	pykickstart/commands/volgroup.py, pykickstart/commands/zfcp.py:  Get
	rid of a special function to set the data object since we can already
	get at that in the parser from the handler reference.

	* pykickstart/commands/zerombr (F9_ZeroMbr):  zerombr no longer takes
	any arguments.

2007-10-30  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/*:  Make the OptionParser instance an attribute
	of each class so we can extract more information out of the commands
	dict.

	* pykickstart/commands/monitor.py, pykickstart/commands/network.py,
	pykickstart/commands/rootpw.py, pykickstart/commands/timezone.py,
	pykickstart/commands/vnc.py, pykickstart/commands/xconfig.py:
	Remove redundant parse methods.

	* pykickstart/commands/network.py, pykickstart/commands/repo.py,
	pykickstart/commands/user.py, pykickstart/commands/volgroup.py,
	pykickstart/commands/zfcp.py:  Use the the setClassData method in more